--- a/extension-en/manifest.json
+++ b/extension-en/manifest.json
@@ -12,10 +12,19 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["<all_urls>"],
       "js": [
+        "js/getcontext.js",
+        "js/contexts/youtube.js",
+        "js/contexts/netflix.js",
+        "js/contexts/amazon.js",
+        "js/contexts/disney.js",
+        "js/contexts/max.js",
+        "js/contexts/star.js",
+        "js/contexts/generic.js",
         "js/getCaptions.js"
-      ]
+      ],
+      "run_at": "document_idle"
     }
   ],
   "commands": {
