feat: Implement real-time translation updates using Server-Sent Events (SSE) via an offscreen document and backend integration.

--- a/extension-en/manifest.json
+++ b/extension-en/manifest.json
@@ -2,7 +2,13 @@
   "manifest_version": 3,
   "name": "English Collector",
   "version": "1.0",
-  "permissions": ["activeTab", "scripting", "storage", "contextMenus"],
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage",
+    "contextMenus",
+    "offscreen"
+  ],
   "action": {
     "default_popup": "index.html"
   },
