--- a/extension-en/manifest.json
+++ b/extension-en/manifest.json
@@ -7,7 +7,8 @@
     "scripting",
     "storage",
     "contextMenus",
-    "offscreen"
+    "offscreen",
+    "notifications"
   ],
   "action": {
     "default_popup": "index.html"
